--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,11 @@ html(lang="en")
         header 
             h1 Zoom-clone
         main
-            h2 Welcome!
+            form#nick
+                input(type="text", placeholder="what your name", required)
+                button Save
+            ul
+            form#message
+                input(type="text", placeholder="write a msg", required)
+                button Send
         script(src="/public/js/app.js")
