--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,15 +11,18 @@ html(lang="en")
             h1 Zoom-clone
         main
             div#welcome
-                form
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
+                div 💡 이름을 입력하지 않으면 익명으로 참가돼요.
+                div#nickname
+                    form
+                        input(placeholder="nickname", required, type="text")
+                        button Save
+                div#roomName
+                    form
+                        input(placeholder="room name", required, type="text")
+                        button Enter Room
             div#room
                 h3
                 ul
-                form#name
-                    input(placeholder="nickname", required, type="text")
-                    button Save
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send
