use media stream

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -28,7 +28,10 @@ html(lang="en")
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send
-
-        
+            div#myStream
+                video#myFace(autoplay, playsinline, width="400", height="400")
+                button#mute 음소거
+                button#camera 비디오 끄기
+                select#cameras
         script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
